crates/kaban-parser/tests/snapshots/expressions__named_module_struct_instantiation_with_implicit_field_declarations.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: Foo.Buzz {x, y,};

Block [
    StructInstantiation {
        name: MemberAccess {
            left: Identifier("Foo"),
            right: Identifier("Buzz"),
        },
        fields: [
            Struct Field {
                name: Identifier("x"),
                assignment: Identifier("x"),
            },
            Struct Field {
                name: Identifier("y"),
                assignment: Identifier("y"),
            },
        ],
    },
]
