crates/kaban-parser/tests/snapshots/expressions__named_struct_instantiation_with_explicit_field_declarations.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: Foo {x: x, y: y};

Block [
    StructInstantiation {
        name: Identifier("Foo"),
        fields: [
            Struct Field {
                name: Identifier("x"),
                assignment: Identifier("x"),
            },
            Struct Field {
                name: Identifier("y"),
                assignment: Identifier("y"),
            },
        ],
    },
]
