crates/kaban-parser/tests/snapshots/expressions__nested_block_expression.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: { let x = { let y = 10; pass y + 1; }; pass x; }

Block [
    Block [
        Let {
            name: IdentifierBinding {
                name: Identifier("x"),
                mutable: false,
            },
            assignment: Block [
                Let {
                    name: IdentifierBinding {
                        name: Identifier("y"),
                        mutable: false,
                    },
                    assignment: IntLit("10"),
                },
                Pass(
                    Add {
                        left: Identifier("y"),
                        right: IntLit("1"),
                    },
                ),
            ],
        },
        Pass(
            Identifier("x"),
        ),
    ],
]
