crates/kaban-parser/tests/snapshots/expressions__nested_function_calls.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: foo(bar(baz(10)));

Block [
    FuncCall {
        callee: Identifier("foo"),
        args: [
            FuncCall {
                callee: Identifier("bar"),
                args: [
                    FuncCall {
                        callee: Identifier("baz"),
                        args: [
                            IntLit("10"),
                        ],
                    },
                ],
            },
        ],
    },
]
