crates/kaban-parser/tests/snapshots/expressions__new_method_call.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: new Person@<i32>::Core@<i32, f64>.from_id(10);

Block [
    New(
        MethodCall {
            callee: GenericInstantiation {
                callee: ImplAccess {
                    left: GenericInstantiation {
                        callee: Identifier("Person"),
                        args: [
                            Type(I32),
                        ],
                    },
                    right: Identifier("Core"),
                },
                args: [
                    Type(I32),
                    Type(F64),
                ],
            },
            method name: Identifier("from_id"),
            is mutable: false,
            args: [
                IntLit("10"),
            ],
        },
    ),
]
