crates/kaban-parser/tests/snapshots/expressions__panic_member_access.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: foo!.bazz;

Block [
    MemberAccess {
        left: PanicIfErrOrNone(
            Identifier("foo"),
        ),
        right: Identifier("bazz"),
    },
]
