crates/kaban-parser/tests/snapshots/expressions__panic_up_on_undefined.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: x!;

Block [
    PanicIfErrOrNone(
        Identifier("x"),
    ),
]
